--- a/requirements.txt
+++ b/requirements.txt
@@ -191,6 +191,7 @@ tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.9.0
 typer==0.9.0
+typing-extensions
 typing-inspect==0.9.0
 tzdata==2023.3
 tzlocal==5.0.1
